--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "@types/react-icons": "^3.11.0",
+    "@types/react-icons": "3.0.0",
+    "axios": "^0.21.0",
     "leaflet": "^1.7.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
