--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/react-icons": "3.0.0",
     "@types/styled-components": "^5.1.4",
     "axios": "^0.21.0",
+    "i": "^0.3.6",
     "leaflet": "^1.7.1",
     "react": "^16.13.1",
+    "react-animista": "^1.0.2",
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.2.0",
