--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.13.1",
     "react-animista": "^1.0.2",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.12.2",
     "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
