--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-icons": "3.0.0",
+    "@types/react-input-mask": "^3.0.0",
     "@types/styled-components": "^5.1.4",
     "axios": "^0.21.0",
     "i": "^0.3.6",
@@ -21,6 +22,7 @@
     "react-animista": "^1.0.2",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.12.2",
+    "react-input-mask": "^2.0.4",
     "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
