--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-credit-cards": "^0.8.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-icons": "3.0.0",
     "@types/react-input-mask": "^3.0.0",
@@ -20,6 +21,7 @@
     "leaflet": "^1.7.1",
     "react": "^16.13.1",
     "react-animista": "^1.0.2",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.12.2",
     "react-input-mask": "^2.0.4",
