--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
+    "@types/react": "^17.0.2",
     "@types/react-credit-cards": "^0.8.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-icons": "3.0.0",
     "@types/react-input-mask": "^3.0.0",
     "@types/styled-components": "^5.1.4",
+    "autoprefixer": "^10.2.4",
     "axios": "^0.21.0",
     "i": "^0.3.6",
     "leaflet": "^1.7.1",
@@ -57,6 +58,7 @@
     "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
+    "cssnano": "^4.1.10",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.12.0",
@@ -66,6 +68,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.3",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "install": "^0.13.0",
     "prettier": "^2.1.2"
   }
 }
